Tue Aug 20 16:40:48 CEST 2002 Igor Zlatkovic <igor@stud.fh-frankfurt.de>

	* win32/Makefile.msvc: added the prefix location to the include
	and lib search path.

Mon Aug 19 15:03:11 CEST 2002 Daniel Veillard <daniel@veillard.com>

	* libxslt/transform.c: found and fixed the small <xsl:choose>
	  bug which was giving troubles to DocBook users (the test expression
	  of <when> was evaluated in the namespace context of <choose> !)

2002-08-18  Havoc Pennington  <hp@pobox.com>

	* autogen.sh: hardcode aclocal-1.4/automake-1.4 so that users with
	both automake 1.6 and 1.4 installed get the right automake. Means
	compilation from CVS will now require the latest automake 1.4
	release, or manually creating symlinks called "automake-1.4" and
	"aclocal-1.4"

Wed Aug 14 18:54:19 CEST 2002 Daniel Veillard <daniel@veillard.com>

	* configure.in python/Makefile.am: AMD x86-64 induced changes from
	  Frederic Crozat

Wed Aug 14 13:35:04 CEST 2002 Daniel Veillard <daniel@veillard.com>

	* libxslt/functions.c: recovering to the old (somewhat) broken
	  implementation of document('') when there is no base for the
	  source document or it can't be realoaded (e.g. when the sytlesheet
	  was loaded from a memory string). Matt Sergeant insisted on this
	  one :-)

Tue Aug 13 11:21:44 CEST 2002 Daniel Veillard <daniel@veillard.com>

	* libxslt/transform.c: applied another patch from Nathan Myers about
	  a possible memory leak in case of error

Mon Aug 12 23:12:59 CEST 2002 Daniel Veillard <daniel@veillard.com>

	* libxslt/transform.c: applied a patch from Nathan Myers about
	  an erroneous free in case of error

Thu Aug  1 14:29:11 CEST 2002 Daniel Veillard <daniel@veillard.com>

	* configure.in: upon suggestion of Marc-Andre Lemburg, make 
	  the misdetection of libxml2 python bindings a warning only

Sun Jul 21 19:10:00 HKT 2002 William Brack <wbrack@mmm.com.hk>

	* xsltInternals.h/xslt.c/transform.c and pattern.c: fixed
	  a bug reported by Gero Meissner (87230)