@@ -89,6 +89,7 @@ EXTRA_DIST =	\
 	bug-87.xml \
 	bug-88.xml \
 	bug-89.xml \
+	bug-90.xml \
 	character.xml \
 	array.xml \
 	items.xml
